--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   spigot:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile_Spigot
     container_name: spigot-container
     volumes:
       - ./spigot-data/:/data/
